// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton should render 1`] = `
<button
  className="icon-button icon-button__left"
  onClick={[Function]}
  title="Test"
  type="button"
>
  <span
    className="
        rc-icon-button
        rc-icon-button--cross
      "
  />
</button>
`;

exports[`IconButton should render on the right side 1`] = `
<button
  className="icon-button icon-button__right"
  onClick={[Function]}
  title="Test"
  type="button"
>
  <span
    className="
        rc-icon-button
        rc-icon-button--cross
      "
  />
</button>
`;
